test/library/standard/List/toArray/nonnilable-owned.good
nonnilable-owned.chpl:3: error: toArray() method is not available on a 'list' with elements of a non-nilable owned type, here: owned object
