test/library/standard/List/toArray/nonnilable-owned.chpl
use List;
var l: list(owned object);
var a = l.toArray();
